--- a/news.html
+++ b/news.html
@@ -31,23 +31,14 @@
 	
 	<div class="container">
 		<div class="row makecentre">
-			<div class="col-md-2 makecentre">
-				<h1> <a href="index.html">Home</a></h1>
-			</div>
-			<div class="col-md-2 makecentre">
-				<h1> <a href="index.html">News</a></h1>
-			</div>
-			<div class="col-md-4 makecentre">
-				<h1> <a href="index.html">Research/Publications</a></h1>
-			</div>
-			<div class="col-md-2 makecentre">
-				<h1> <a href="index.html">About</a></h1>
-			</div>
-			<div class="col-md-2 makecentre">
-				<h1> <a href="index.html">Contact</a></h1>
+			<div class="col-md-12 makecentre">
+				<h1 class="makecenter widespacing"> 
+					<a href="index.html">Home</a> <a href="news.html">News</a> <a href="publications.html">Research/Publications</a> <a href="about.html">About</a> <a href="contact.html">Contact</a>
+				</h1>
 			</div>
 		</div>
 	</div>
+	  
 	  
 	</div>
 
