--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
 	  <!-- Split into three columns and have some articles-->
 	
-	<div class="container">
+	<!--div class="container">
 		<div class="row makecentre">
 			<div class="col-md-2 makecentre">
 				<h1> <a href="index.html">Home</a></h1>
@@ -45,6 +45,16 @@
 			</div>
 			<div class="col-md-2 makecentre">
 				<h1> <a href="contact.html">Contact</a></h1>
+			</div>
+		</div>
+	</div-->
+
+	<div class="container">
+		<div class="row makecentre">
+			<div class="col-md-12 makecentre">
+				<h1 class="makecenter widespacing"> 
+					<a href="index.html">Home</a> <a href="news.html">News</a> <a href="publications.html">Research/Publications</a> <a href="about.html">About</a> <a href="contact.html">Contact</a>
+				</h1>
 			</div>
 		</div>
 	</div>
