added some images etc

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-		<title>Aerial ABM</title>
-		<link rel="shortcut icon" href="img/drone_2.png"/>
+		<title>SEB KAY</title>
+		<link rel="shortcut icon" href="img/me_001.JPG"/>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +20,8 @@
 	<div class="bgimg-1">
 		<div class="caption">
 		    <span class="border">	    	
-		       		AERIAL ABM: AERIAL ADDITIVE BUILDING AND MANUFACTURING<br/>	    	   		    		
-	    			<div class="smaller">3D PRINTED CONSTRUCTION USING A SWARM OF AERIAL ROBOTS</div>
+		       		SEBASIAN KAY: WHO I AM AND WHAT I AM ABOUT<br/>	    	   		    		
+	    			<div class="smaller">READ ON</div>
 	    	</span>
 		</div>
 	</div>
