--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-		<title>Aerial ABM</title>
-		<link rel="shortcut icon" href="img/drone_2.png"/>
+		<title>SEB KAY</title>
+		<link rel="shortcut icon" href="img/me_001.JPG"/>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link href="https://v4-alpha.getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,8 +20,8 @@
 	<div class="bgimg-short">
 		<div class="highcaption">
 		    <span class="border">	    	
-		       		AERIAL ABM: AERIAL ADDITIVE BUILDING AND MANUFACTURING<br/>	    	   		    		
-	    			<div class="smaller">3D PRINTED CONSTRUCTION USING A SWARM OF AERIAL ROBOTS</div>
+		       		SEBASTIAN KAY<br/>	    	   		    		
+	    			<div class="smaller">ABOUT</div>
 	    	</span>
 		</div>
 	</div>
@@ -35,43 +35,6 @@
 				<h1 class="makecenter widespacing"> 
 					<a href="index.html">Home</a> <a href="news.html">News</a> <a href="publications.html">Research/Publications</a> <a href="about.html">About</a> <a href="contact.html">Contact</a>
 				</h1>
-
-				<p class="setleft">
-					</br>
-					</br>
-					</br>
-					Aerial Additive Building Manufacturing (Aerial ABM) is a UK EPSRC funded research that will develop an aerial robotic construction system that enables aerial robots to 3D print building structures autonomously.  Additive Building Manufacturing (ABM), is already being trialled in many parts of the world by the construction industry. It involves the use of large robots on a building site that extrude building materials to construct buildings, similar to a 3D printer. This process has the advantage of reducing construction times, material and transport costs and easing traffic and environmental impacts. These technologies also have the potential to improve safety in the building industry. According to the International Labour Organisation, at least 60,000 people are killed every year on construction sites - around one death every 10 minutes. Current approaches to ABM are all ground-based, only operating in easily accessible locations, with limited ability to adapt to diverse site conditions. The research team aims to miniaturise ABM and provide it with aerial capabilities so that it can be more mobile, and able to manufacture complex building structures while adapting to diverse site scenarios. This miniaturisation will also enable parallel production, where swarms of aerial printers working together could potentially reduce construction times. The aerial robots would be able to fly above difficult ground conditions and land at a construction site where they could work together to construct a building from scratch. The research will enable safer construction in hard-to access and dangerous conditions often faced in construction work at-height and post-disaster reconstruction.
-				</p>
-
-				<h2>RESEARCH INVESTIGATORS</h2>
-				<p><b>Aerial Robotics</b>   |   <b>Dr Mirko Kovac</b>, Principle Investigator  |  <b>Imperial College</b> (Aerial Robotics Lab, Dep. Aeronautical Engineering)</p>
-				<p><b>Swarm Flight Construction Process</b>   |   <b>Robert Stuart-Smith</b>,  Co-Investigator   |  University College of London (Dep. Computer Science)</p>
-				<p>Computer Vision & Localisation   |   Dr Stefan Leuttenegger, Co-Investigator  |  Imperial College (Dyson Robotics Lab, Dep. Computing)</p>
-				<p>Haptics/Human-Robot Collaboration   |   Dr Mandayam Srinivasan,  Co-Investigator   |  University College of London  (Dep. Computer Science)</p>
-				<p>Materials Science   |   Dr Richard Ball, Co-Investigator  |  University of Bath (Dep. Architecture + Civil Engineering)</p>
-				<p>Structural Engineering   |   Dr Chris Williams  &  Dr Paul Shepherd,  Co-Investigator  |  University of Bath (Dep. Architecture + Civil Engineering)</p>
- 
-				<h2>RESEARCH SUBCONTRACTOR</h2>
-				<p>Architectural Design   |   Robert Stuart-Smith,  Co-Investigator   |  Architectural Association School of Architecture</p>
-
-				<h2>RESEARCHERS</h2>
-				<p>Dr Vijay Pawar  |  University College of London (Dep. Computer Science)  |   Computer Science & Haptics</p>
-				<p>Dr Sina Sareh  |   Imperial College  (Aerial Robotics Lab, Dep. Aeronautical Engineering)  |  Aerial Robotics</p>
-				<p>Dr Ketao Zhang  |   Imperial College  (Aerial Robotics Lab, Dep. Aeronautical Engineering)  |  Aerial Robotics</p>
-				<p>Dr Wenbin Li  |   Imperial College (Dyson Robotics Lab, Department of Computing)  |  Computer Vision & Localisation</p>
-
-				<h2>PHD RESEARCH</h2>
-				<p>Dimos Tzoumanikas |  Imperial College  (Dyson Robotics Lab, Department of Computing)   |  Computer Vision & Localisation</p>
-
-				<h2>INDUSTRIAL PARTNERS</h2>
-				<p>Cementation Skanska   |   Construction</p>
-				<p>BuroHappold   |   Engineering</p>
-				<p>Ultimaker  |   3D Printing</p>
-				<p>Dyson Ltd   |   Robotics</p>
-				<p>BRE Trust   |   Construction Material Science</p> 
-
-				<h2>RESEARCH FUNDING / AWARD BODY:</h2>
-				<p>EPSRC (Engineering and Physical Sciences Research Council) , UK.</p>
 
 			</div>
 		</div>
