--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-		<title>Aerial ABM: Contact</title>
+		<title>SEBS CONTACT DETAILS</title>
 		<link rel="shortcut icon" href="img/drone_2.png"/>
 
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -16,18 +16,6 @@
 	</head>
 	
 	<body>	
-
-<!--
-	<div class="bgimg-1">
-		<div class="caption">
-		    <span class="border">	    	
-		       		AERIAL ABM: AERIAL ADDITIVE BUILDING AND MANUFACTURING<br/>	    	   		    		
-	    			<div class="smaller">3D PRINTED CONSTRUCTION USING A SWARM OF AERIAL ROBOTS</div>
-	    	</span>
-		</div>
-	</div>
-
--->
 
 	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
 	  <!-- Split into three columns and have some articles-->
@@ -57,66 +45,14 @@
 	  			</h1>
 	  			<p> 
 	  				All enquires should be directed to:</br>
-					<b>E</b>: aerialabmpress@gmail.com 
+					<b>E</b>: my email @gmail.com 
 				</p>
 				</br></br></br>
-				<h1>
-					Media/Press Relations
-				</h1>
-				<p>
-					For further information on Aerial ABM please download our press release here. This research is currently under development, and not available for further dissemination at present. If you would like to register interest in this work,  we will keep you updated on research developments and enable you to be amongst the first to know when we are ready for broader dialogue. 
-				</p>
-
+				
 	  		</div>	  		
 	  	</div>
 	  </div>
 	</div>
-
-	<form class="form-horizontal" role="form" method="post" action="index.php">
-	<div class="makecentre">
-
-		</br>
-		</br>
-		</br>
-
-		<h1>
-			<b>
-				Subscribe to our Newsletter
-			</b>
-		</h1>
-
-		<p>
-			Sign up with your email address to receive news and updates.
-		</p>
-
-	</div>
-	<div class="form-group">
-		<label for="name" class="col-sm-2 control-label">Name</label>
-		<div class="col-sm-4">
-			<input type="text" class="form-control" id="name" name="name" placeholder="First Name" value="">
-		</div>
-		<div class="col-sm-4">
-			<input type="text" class="form-control" id="name" name="name" placeholder="Last Name" value="">
-		</div>
-	</div>
-	<div class="form-group">
-		<label for="email" class="col-sm-2 control-label">Email</label>
-		<div class="col-sm-4">
-			<input type="email" class="form-control" id="email" name="email" placeholder="email@domain.com" value="">
-		</div>
-	</div>	
-	<div class="form-group">
-		<div class="col-sm-4 col-sm-offset-2">
-			<input id="submit" name="submit" type="submit" value="Send" class="btn btn-primary">
-		</div>
-	</div>
-	<div class="form-group">
-		<div class="col-sm-10 col-sm-offset-2">
-			<! Will be used to display an alert to the user>
-		</div>
-	</div>
-</form>
-
 
 	<div class="bgimg-1">
 	  <div class="caption">
