--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,13 @@
 	<div style="color: #777;background-color:white;text-align:center;padding:50px 80px;text-align: justify;">
 	  <!-- Split into three columns and have some articles-->
 	
-	<div class="container">
+	  <div class="container">
 		<div class="row makecentre">
 			<div class="col-md-12 makecentre">
 				<h1 class="makecenter widespacing"> 
-					<a href="index.html">Home</a> <a href="news.html">News</a> <a href="publications.html">Research/Publications</a> <a href="about.html">About</a> <a href="contact.html">Contact</a>
+					<a href="index.html">Home</a> 
+					<a href="about.html">About</a> 
+					<a href="contact.html">Contact</a>
 				</h1>
 			</div>
 		</div>
