--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<div class="bgimg-1">
 		<div class="caption">
 		    <span class="border">	    	
-		       		SEBASIAN KAY: WHO I AM AND WHAT I AM ABOUT<br/>	    	   		    		
-	    			<div class="smaller">READ ON</div>
+		       		SEBASIAN KAY<br/>	    	   		    		
+	    			<div class="smaller">COMPUTER VISION AND AUTOMATION RESEARCHER</div>
 	    	</span>
 		</div>
 	</div>
@@ -53,7 +53,9 @@
 		<div class="row makecentre">
 			<div class="col-md-12 makecentre">
 				<h1 class="makecenter widespacing"> 
-					<a href="index.html">Home</a> <a href="news.html">News</a> <a href="publications.html">Research/Publications</a> <a href="about.html">About</a> <a href="contact.html">Contact</a>
+					<a href="index.html">Home</a> 
+					<a href="about.html">About</a> 
+					<a href="contact.html">Contact</a>
 				</h1>
 			</div>
 		</div>
@@ -64,7 +66,7 @@
 	<div class="bgimg-2">
 
 	  <div class="caption">	
-	    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">Publication One</span>
+	    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">AERIAL ROBOICS AND AUTONOMOUS DATA CAPTURE</span>
 	  </div>
 	</div>
 
@@ -76,7 +78,7 @@
 
 	<div class="bgimg-3">
 	  <div class="caption">
-	    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">Publication Two</span>
+	    <span class="border" style="background-color:transparent;font-size:25px;color: #f7f7f7;">HYBRID INTERFACES FOR COMPLEX SYSTEMS</span>
 	  </div>
 	</div>
 
